--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 <body>
     <h1>The Baghdad Codex</h1>
     <nav>
-        <a href="aqidah/">Aqidah</a>
+        <a href="aqidah/">Message</a>
         <a href="biographies/">Biographies</a>
         <a href="news/">News</a>
     </nav>
+
+
+
+    
 </body>
 </html>
