--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>The Baghdad Codex</h1>
     <nav>
-        <a href="The Message/">Message</a>
+        <a href="Message/">The Message</a>
         <a href="biographies/">Biographies</a>
         <a href="news/">News</a>
     </nav>1
