--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Baghdad Codex</title>
+    <title>The Golden Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
