--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>The Baghdad Codex</h1>
+    <h1>The Golden Library</h1>
     <nav>
         <a href="Message/">The Message</a>
         <a href="biographies/">Biographies</a>
