--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <title>The Golden Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>The Golden Library</h1>
-    <nav>
-        <a href="Message/">The Message</a>
-        <a href="biographies/">Biographies</a>
-        <a href="news/">News</a>
-    </nav>
 
+<h1>The Golden Library</h1>
 
+<nav>
+    <a href="message/">The Message</a>
+    <a href="biographies/">Biographies</a>
+    <a href="news/">News</a>
+</nav>
 
+<p>Welcome to The Golden Library.</p>
 
 </body>
 </html>
