--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav>
     <a href="message/">The Message</a>
-    <a href="biographies/">Biographies</a>
+    <a href="Biographies-CODEX/">Biographies</a>
     <a href="news/">News</a>
 </nav>
 
