--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
 
 <p>Welcome to The Golden Library.</p>
 
+
+<p>[Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness. 
+    And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].
+
+Whoever Allaah guides, there is no one that can lead him astray, and whoever is led astray, there is no guide for him.
+
+I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – 
+and I bear witness that Muhammad is His slave and messenger.
+</p>
+
 </body>
 </html>
