--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <p>Welcome to The Golden Library.</p>
 
 
-<p>[Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness. 
-    And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].
+<p>[Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness.<br>
+    And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].<br>
 
-Whoever Allaah guides, there is no one that can lead him astray, and whoever is led astray, there is no guide for him.
+Whoever Allaah guides, there is no one that can lead him astray, and whoever is led astray, there is no guide for him.<br>
 
-I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – 
-and I bear witness that Muhammad is His slave and messenger.
+I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – <br>
+and I bear witness that Muhammad is His slave and messenger.<br>
 </p>
 
 </body>
