--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
 <p>Welcome to The Golden Library.</p>
 
 
-<p>[Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness.<br>
-    And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].<br>
+<p>In the name of God, the Most Gracious, the Most Merciful<br>
+<br>
+[Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness.<br>
+And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].<br>
 <br>
 Whoever Allaah guides, there is no one that can lead him astray, and whoever is led astray, there is no guide for him.<br>
 <br>
 I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – <br>
 and I bear witness that Muhammad is His slave and messenger.<br>
+
+<br>
+<br>
+<br>
+بسم الله الرحمن الرحيم<br>
+<br>
+تقديم<br>
+
+إن الحمد لله، نحمده ونستعينه ونستغفره، ونعوذُ بالله من شرور أنفسنا ومن سيئات أعمالنا،<br>
+ من يهده الله فلا مُضِلَّ له، ومَن يُضْلِلْ فَلَا هَادِيَ له،<br>
+ <br>
+وأشهد أن لا إله إلا الله وحده لا شريك له، وأَشْهَد أَنَّ محمَّدًا عبده ورسوله،
+ صلى الله عليه وعلى آله وأصحابه ومن تبعهم بإحسان إلى يوم الدين، وسلَّم تسليما كثيرا.
 </p>
 
 </body>
