--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Golden Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<h1>The Golden Library</h1>
+<header>
+    <h1>The Golden Library</h1>
 
-<nav>
-    <a href="message/">The Message</a>
-    <a href="./Biographies-CODEX/CODEX.html">Biographies</a>
-    <a href="news/">News</a>
-</nav>
+    <nav>
+        <a href="message/">The Message</a>
+        <a href="./Biographies-CODEX/CODEX.html">Biographies</a>
+        <a href="news/">News</a>
+    </nav>
+</header>
 
-<p>Welcome to The Golden Library.</p>
+<main>
 
+    <p>Welcome to The Golden Library.</p>
 
-<p>In the name of God, the Most Gracious, the Most Merciful<br>
-<br>
-[Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness.<br>
-And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].<br>
-<br>
-Whoever Allaah guides, there is no one that can lead him astray, and whoever is led astray, there is no guide for him.<br>
-<br>
-I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – <br>
-and I bear witness that Muhammad is His slave and messenger.<br>
+    <p>
+        In the name of God, the Most Gracious, the Most Merciful<br><br>
 
-<br>
-<br>
-<br>
-بسم الله الرحمن الرحيم<br>
-<br>
-تقديم<br>
+        [Verily], all praise is for Allaah, [we praise Him and] we seek His assistance and we ask for His forgiveness.<br>
+        And we seek refuge in Allaah from the evils of our selves [and from the evils of our actions].<br><br>
 
-إن الحمد لله، نحمده ونستعينه ونستغفره، ونعوذُ بالله من شرور أنفسنا ومن سيئات أعمالنا،<br>
- من يهده الله فلا مُضِلَّ له، ومَن يُضْلِلْ فَلَا هَادِيَ له،<br>
- <br>
-وأشهد أن لا إله إلا الله وحده لا شريك له، وأَشْهَد أَنَّ محمَّدًا عبده ورسوله،
- صلى الله عليه وعلى آله وأصحابه ومن تبعهم بإحسان إلى يوم الدين، وسلَّم تسليما كثيرا.
-</p>
+        Whoever Allaah guides, there is no one that can lead him astray, and whoever is led astray, there is no guide for him.<br><br>
+
+        I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – <br>
+        and I bear witness that Muhammad is His slave and messenger.<br><br><br>
+
+        بسم الله الرحمن الرحيم<br><br>
+
+        تقديم<br>
+
+        إن الحمد لله، نحمده ونستعينه ونستغفره، ونعوذُ بالله من شرور أنفسنا ومن سيئات أعمالنا،<br>
+        من يهده الله فلا مُضِلَّ له، ومَن يُضْلِلْ فَلَا هَادِيَ له،<br><br>
+
+        وأشهد أن لا إله إلا الله وحده لا شريك له، وأَشْهَد أَنَّ محمَّدًا عبده ورسوله،
+        صلى الله عليه وعلى آله وأصحابه ومن تبعهم بإحسان إلى يوم الدين، وسلَّم تسليما كثيرا.
+    </p>
+
+</main>
 
 </body>
 </html>
