--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
         I bear witness that there is no deity that has the right to be worshipped except Allaah – [alone and with no partner] – <br>
         and I bear witness that Muhammad is His slave and messenger.<br><br><br>
 
-        بسم الله الرحمن الرحيم<br><br>
+    <div class="arabic">
+    بسم الله الرحمن الرحيم<br><br>
 
-        تقديم<br>
+    تقديم<br><br>
 
-        إن الحمد لله، نحمده ونستعينه ونستغفره، ونعوذُ بالله من شرور أنفسنا ومن سيئات أعمالنا،<br>
-        من يهده الله فلا مُضِلَّ له، ومَن يُضْلِلْ فَلَا هَادِيَ له،<br><br>
+    إن الحمد لله، نحمده ونستعينه ونستغفره، ونعوذُ بالله من شرور أنفسنا ومن سيئات أعمالنا،<br>
+    من يهده الله فلا مُضِلَّ له، ومَن يُضْلِلْ فَلَا هَادِيَ له،<br><br>
 
-        وأشهد أن لا إله إلا الله وحده لا شريك له، وأَشْهَد أَنَّ محمَّدًا عبده ورسوله،
-        صلى الله عليه وعلى آله وأصحابه ومن تبعهم بإحسان إلى يوم الدين، وسلَّم تسليما كثيرا.
+    وأشهد أن لا إله إلا الله وحده لا شريك له، وأَشْهَد أَنَّ محمَّدًا عبده ورسوله،
+    صلى الله عليه وعلى آله وأصحابه ومن تبعهم بإحسان إلى يوم الدين، وسلَّم تسليما كثيرا.
+    </div>
+
     </p>
 
 </main>
