--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
 
     </p>
 
+    <p> 
+    <h2>Description</h2>
+    This website, The Golden Library, has been created as a humble effort to gather and present biographies that are often difficult to access or scattered across the books of the scholars. <br>
+    Its purpose is to serve as a clear and organized library — a codex — of the lives of the people of importance mentioned in the Qur’an and the Sunnah, as well as the companions, the scholars, <br>
+    and other figures of significance in Islamic history.<br>
+<br>
+    The intention behind this work is to make knowledge more accessible and to assist Muslims in learning about the righteous predecessors, their lives, their struggles, and their contributions, <br>
+    without difficulty or confusion. The biographies presented here are extracted and compiled from the works of the scholars, and the sources will be provided in every entry.<br>
+<br>
+    This project is a personal effort and has not been authenticated or reviewed by scholars. It is undertaken while seeking knowledge and striving for clarity and correctness, <br>
+    in the hope that it may benefit the Ummah and encourage learning about the companions and other important figures of Islam.<br>
+
+
+    </p>
+
 </main>
 
 </body>
