--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     The intention behind this work is to make knowledge more accessible and to assist Muslims in learning about the righteous predecessors, their lives, their struggles, and their contributions, <br>
     without difficulty or confusion. The biographies presented here are extracted and compiled from the works of the scholars, and the sources will be provided in every entry.<br>
 <br>
-    This project is a personal effort and has not been authenticated or reviewed by scholars. It is undertaken while seeking knowledge and striving for clarity and correctness, <br>
+    This project is a personal effort and has not been authenticated or reviewed by any scholar. It is undertaken while seeking knowledge and striving for clarity and correctness, <br>
     in the hope that it may benefit the Ummah and encourage learning about the companions and other important figures of Islam.<br>
 
 
