--- a/Biographies-CODEX/CODEX.html
+++ b/Biographies-CODEX/CODEX.html
@@ -15,7 +15,7 @@
 <h2>Available Biographies</h2>
 
 <ul>
-    <li><a href="abu-bakr.html">Abu Bakr</a></li>
+    <li><a href="Ibn-utheymeen.html">Ibn utheymeen</a></li>
 </ul>
 
 </body>
