--- a/Biographies-CODEX/Ibn-utheymeen.html
+++ b/Biographies-CODEX/Ibn-utheymeen.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The biography of Ibn utheymeen/title>
+    <title>The biography of Ibn utheymeen</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -47,6 +47,12 @@
     صلى الله عليه وعلى آله وأصحابه ومن تبعهم بإحسان إلى يوم الدين، وسلَّم تسليما كثيرا.
     </div>
 
+    </p>
+
+    <p>
+
+        Here will the text be written
+    </p>
    
 
 </main>
