--- a/Biographies-CODEX/Ibn-utheymeen.html
+++ b/Biographies-CODEX/Ibn-utheymeen.html
@@ -14,8 +14,9 @@
     <h1>Ibn utheymeen</h1>
 
     <nav>
+        <a href="./THE-BAGHDAD-CODEX/index.html">Home</a>
         <a href="message/">The Message</a>
-        <a href="./Biographies-CODEX/CODEX.html">Biographies</a>
+        <a href="CODEX.html">Biographies</a>
         <a href="news/">News</a>
     </nav>
 </header>
